v19.1/interfaces/GC.Spread.Sheets.IProtectionOptions.md
# Interface: IProtectionOptions

[Spread](../modules/GC.Spread.md).[Sheets](../modules/GC.Spread.Sheets.md).IProtectionOptions

## Table of contents

### Properties

- [allowDeleteColumns](GC.Spread.Sheets.IProtectionOptions.md#allowdeletecolumns)
- [allowDeleteRows](GC.Spread.Sheets.IProtectionOptions.md#allowdeleterows)
- [allowDragInsertColumns](GC.Spread.Sheets.IProtectionOptions.md#allowdraginsertcolumns)
- [allowDragInsertRows](GC.Spread.Sheets.IProtectionOptions.md#allowdraginsertrows)
- [allowEditObjects](GC.Spread.Sheets.IProtectionOptions.md#alloweditobjects)
- [allowFilter](GC.Spread.Sheets.IProtectionOptions.md#allowfilter)
- [allowInsertColumns](GC.Spread.Sheets.IProtectionOptions.md#allowinsertcolumns)
- [allowInsertRows](GC.Spread.Sheets.IProtectionOptions.md#allowinsertrows)
- [allowOutlineColumns](GC.Spread.Sheets.IProtectionOptions.md#allowoutlinecolumns)
- [allowOutlineRows](GC.Spread.Sheets.IProtectionOptions.md#allowoutlinerows)
- [allowResizeColumns](GC.Spread.Sheets.IProtectionOptions.md#allowresizecolumns)
- [allowResizeRows](GC.Spread.Sheets.IProtectionOptions.md#allowresizerows)
- [allowSelectLockedCells](GC.Spread.Sheets.IProtectionOptions.md#allowselectlockedcells)
- [allowSelectUnlockedCells](GC.Spread.Sheets.IProtectionOptions.md#allowselectunlockedcells)
- [allowSort](GC.Spread.Sheets.IProtectionOptions.md#allowsort)
- [allowUsePivotTable](GC.Spread.Sheets.IProtectionOptions.md#allowusepivottable)

## Properties

### <a id="allowdeletecolumns" name="allowdeletecolumns"></a> allowDeleteColumns

• `Optional` **allowDeleteColumns**: `boolean`

如果用户可以删除列，则为 true.

___

### <a id="allowdeleterows" name="allowdeleterows"></a> allowDeleteRows

• `Optional` **allowDeleteRows**: `boolean`

如果用户可以删除行，则为 true.

___

### <a id="allowdraginsertcolumns" name="allowdraginsertcolumns"></a> allowDragInsertColumns

• `Optional` **allowDragInsertColumns**: `boolean`

如果用户可以拖动插入列，则为 true.

___

### <a id="allowdraginsertrows" name="allowdraginsertrows"></a> allowDragInsertRows

• `Optional` **allowDragInsertRows**: `boolean`

如果用户可以拖动插入行，则为 true.

___

### <a id="alloweditobjects" name="alloweditobjects"></a> allowEditObjects

• `Optional` **allowEditObjects**: `boolean`

如果用户可以编辑浮动对象，则为 true.

___

### <a id="allowfilter" name="allowfilter"></a> allowFilter

• `Optional` **allowFilter**: `boolean`

如果用户可以过滤范围，则为 true.

___

### <a id="allowinsertcolumns" name="allowinsertcolumns"></a> allowInsertColumns

• `Optional` **allowInsertColumns**: `boolean`

如果用户可以插入列，则为 true.

___

### <a id="allowinsertrows" name="allowinsertrows"></a> allowInsertRows

• `Optional` **allowInsertRows**: `boolean`

如果用户可以插入行，则为 true.

___

### <a id="allowoutlinecolumns" name="allowoutlinecolumns"></a> allowOutlineColumns

• `Optional` **allowOutlineColumns**: `boolean`

如果用户可以展开或折叠列组，则为 true.

___

### <a id="allowoutlinerows" name="allowoutlinerows"></a> allowOutlineRows

• `Optional` **allowOutlineRows**: `boolean`

如果用户可以展开或折叠行组，则为 true.

___

### <a id="allowresizecolumns" name="allowresizecolumns"></a> allowResizeColumns

• `Optional` **allowResizeColumns**: `boolean`

如果用户可以调整列的大小，则为 true.

___

### <a id="allowresizerows" name="allowresizerows"></a> allowResizeRows

• `Optional` **allowResizeRows**: `boolean`

如果用户可以调整行的大小，则为 true.

___

### <a id="allowselectlockedcells" name="allowselectlockedcells"></a> allowSelectLockedCells

• `Optional` **allowSelectLockedCells**: `boolean`

如果用户可以选择锁定单元格，则为 true 或 undefined。

___

### <a id="allowselectunlockedcells" name="allowselectunlockedcells"></a> allowSelectUnlockedCells

• `Optional` **allowSelectUnlockedCells**: `boolean`

如果用户可以选择未锁定的单元格，则为 true 或 undefined。

___

### <a id="allowsort" name="allowsort"></a> allowSort

• `Optional` **allowSort**: `boolean`

如果用户可以排序范围，则为 true.

___

### <a id="allowusepivottable" name="allowusepivottable"></a> allowUsePivotTable

• `Optional` **allowUsePivotTable**: `boolean`

如果用户可以使用数据透视表，则为true.
